--- a/programs/betana/Cargo.toml
+++ b/programs/betana/Cargo.toml
@@ -21,3 +21,6 @@ solana-program = "1.9.7"
 solana-sdk = "1.9.7"
 spl-stake-pool = "0.6.3"
 thiserror = "1.0.24"
+borsh = "0.9"
+num-traits = "0.2"
+clippy = "0.0.302"
